Bug 190394 - kded4 crash when manually enabling cookies
Summary: kded4 crash when manually enabling cookies
Status: RESOLVED FIXED
Alias: None
Product: kdelibs
Classification: Unmaintained
Component: kded (other bugs)
Version First Reported In: 4.2
Platform: Debian testing Linux
: NOR crash
Target Milestone: ---
Assignee: David Faure
URL:
Keywords:
: 192963 194657 198454 199835 202416 (view as bug list)
Depends on:
Blocks:
 
Reported: 2009-04-23 02:04 UTC by Raúl
Modified: 2009-08-04 02:23 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Raúl 2009-04-23 02:04:15 UTC
Version:            (using KDE 4.2.2)
OS:                Linux
Installed from:    Debian testing/unstable Packages

Open konqueror. Go to Preferences->Configure Konqueror->Configure cookies->Policy, Select "Reject all cookies" (having them enabled) and accept.

Close konqueror. killall kded4, kstart kded4, open a blank konqueror

Go to Tools->HTML preferences->Cookies (as to enable them)

  I have this kded4 crash:

Aplicación: Servicio de KDE (kded4), señal SIGSEGV
0x00007f59368c88a0 in __nanosleep_nocancel () from /lib/libc.so.6
Current language:  auto; currently c

Thread 1 (Thread 0x7f5936e68750 (LWP 29230)):
[KCrash Handler]
#5  KCookieJar::setDomainAdvice (this=0x10c7080, _domain=@0x10c5678, _advice=KCookieAccept) at /usr/include/qt4/QtCore/qatomic_x86_64.h:117
#6  0x00007f592ab38b12 in KCookieServer::setDomainAdvice (this=0xe02f70, url=<value optimized out>, advice=<value optimized out>) at ../../../../kioslave/http/kcookiejar/kcookieserver.cpp:509
#7  0x00007f592ab41b26 in KCookieServerAdaptor::qt_metacall (this=0xea1300, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fff3efa8110) at kcookieserveradaptor.cpp:129
#8  0x00007f5934f1ddb3 in QDBusConnectionPrivate::deliverCall (this=0xcde360, object=0xea1300, msg=@0xf9dd00, metaTypes=@0x7fff3efa83f8, slotIdx=19) at qdbusintegrator.cpp:849
#9  0x00007f5934f1efc4 in QDBusConnectionPrivate::activateCall (this=0xcde360, object=0xea1300, flags=497, msg=@0xf9dd00) at qdbusintegrator.cpp:754
#10 0x00007f5934f1f6a1 in QDBusConnectionPrivate::activateObject (this=0xcde360, node=@0xf9dcd8, msg=@0xf9dd00, pathStartPos=<value optimized out>) at qdbusintegrator.cpp:1283
#11 0x00007f5934f1f9b8 in QDBusActivateObjectEvent::placeMetaCall (this=0xf9dc90) at qdbusintegrator.cpp:1400
#12 0x00007f5936551355 in QObject::event (this=0xe02f70, e=0xf9dc90) at kernel/qobject.cpp:1155
#13 0x00007f5934571a5d in QApplicationPrivate::notify_helper (this=0xceb920, receiver=0xe02f70, e=0xf9dc90) at kernel/qapplication.cpp:3803
#14 0x00007f59345797da in QApplication::notify (this=0x7fff3efa8fc0, receiver=0xe02f70, e=0xf9dc90) at kernel/qapplication.cpp:3768
#15 0x00007f5935b8e55b in KApplication::notify (this=0x7fff3efa8fc0, receiver=0xe02f70, event=0xf9dc90) at ../../kdeui/kernel/kapplication.cpp:307
#16 0x00007f5936542391 in QCoreApplication::notifyInternal (this=0x7fff3efa8fc0, receiver=0xe02f70, event=0xf9dc90) at kernel/qcoreapplication.cpp:587
#17 0x00007f593654302a in QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0xcc5d80) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:209
#18 0x00007f593656aa93 in postEventSourceDispatch (s=<value optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:214
#19 0x00007f59337edf7a in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#20 0x00007f59337f1640 in ?? () from /usr/lib/libglib-2.0.so.0
#21 0x00007f59337f17dc in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#22 0x00007f593656a71f in QEventDispatcherGlib::processEvents (this=0xcebb50, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:319
#23 0x00007f593460347f in QGuiEventDispatcherGlib::processEvents (this=0x10c7080, flags=<value optimized out>) at kernel/qguieventdispatcher_glib.cpp:198
#24 0x00007f5936540cb2 in QEventLoop::processEvents (this=<value optimized out>, flags={i = 1056607936}) at kernel/qeventloop.cpp:143
#25 0x00007f5936540e3d in QEventLoop::exec (this=0x7fff3efa8f00, flags={i = 1056608016}) at kernel/qeventloop.cpp:194
#26 0x00007f59365432ed in QCoreApplication::exec () at kernel/qcoreapplication.cpp:845
#27 0x00007f5936b88b57 in kdemain (argc=1, argv=0x7fff3efa9378) at ../../kded/kded.cpp:937
#28 0x00007f59368485a6 in __libc_start_main (main=0x4006f0 <main>, argc=1, ubp_av=0x7fff3efa9378, init=0x400720 <__libc_csu_init>, fini=<value optimized out>, rtld_fini=<value optimized out>, 
    stack_end=0x7fff3efa9368) at libc-start.c:222
#29 0x0000000000400629 in _start () at ../sysdeps/x86_64/elf/start.S:113
Comment 1 Pino Toscano 2009-06-30 21:33:50 UTC
*** Bug 198454 has been marked as a duplicate of this bug. ***
Comment 2 Dario Andres 2009-07-14 16:05:55 UTC
*** Bug 199835 has been marked as a duplicate of this bug. ***
Comment 3 Christoph Feck 2009-07-22 17:48:49 UTC
*** Bug 192963 has been marked as a duplicate of this bug. ***
Comment 4 Christoph Feck 2009-07-22 17:49:30 UTC
*** Bug 194657 has been marked as a duplicate of this bug. ***
Comment 5 Christoph Feck 2009-07-22 17:58:52 UTC
SVN commit 1001104 by cfeck:

Fix empty domain list in extractDomains

When there is no fully qualified domain name, we are "localhost".
Return that, so that setDomainAdvice does not crash.

This should also fix the empty name appearing in cookie settings.

BUG: 190394
CCBUG: 174235


 M  +3 -1      kcookiejar.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1001104
Comment 6 Christoph Feck 2009-07-22 18:04:29 UTC
SVN commit 1001116 by cfeck:

Fix empty domain list in extractDomains (backport r1001104)

Fix will be in KDE 4.3.0

CCBUG: 190394
CCBUG: 174235


 M  +3 -1      kcookiejar.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1001116
Comment 7 Dario Andres 2009-08-04 02:23:15 UTC
*** Bug 202416 has been marked as a duplicate of this bug. ***