Fix empty domain list in extractDomains

When there is no fully qualified domain name, we are "localhost".
Return that, so that setDomainAdvice does not crash.

This should also fix the empty name appearing in cookie settings.

BUG: 190394
CCBUG: 174235

svn path=/trunk/KDE/kdelibs/; revision=1001104